welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:11: error: not found: value nbBaggles
print(nbBaggles) 
      ^