welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
while (!sortieTrouvee()){
	var nbBaggles=0
  for (k <- 2 to 5)
  	nbBaggles=nbBaggles+1
  if (nbBaggles>2){
    for (m <- 1 to 5) avance();gauche()}
	else{
    for (n <- 1 to 5) avance();droite()}
}
avance()
print(nbBaggles)